Bug 32017 - Doesn't return avatar on our self channel specific handle in MUC
Summary: Doesn't return avatar on our self channel specific handle in MUC
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Will Thompson
QA Contact: Telepathy bugs list
URL:
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2010-12-01 06:12 UTC by Guillaume Desmottes
Modified: 2011-06-02 09:23 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Guillaume Desmottes 2010-12-01 06:12:26 UTC
Original bug report: https://bugzilla.gnome.org/show_bug.cgi?id=636207

Gabble doesn't return any avatar token on our self channel specific handle in mucs, so Empathy can't display it.
Comment 1 Will Thompson 2011-05-31 10:27:55 UTC
Yo, I'm working on this! It's a regression from the WockyMuc rewrite, causing presence stanzas never to reach the handler in Gabble which scrapes the vcard-temp:x:update element out of them.

I accidentally got sucked into cleaning up other bits of the MUC while I was there … I'll push a pair of branches tomorrow.
Comment 2 Will Thompson 2011-06-01 07:07:47 UTC
http://cgit.collabora.com/git/user/wjt/wocky.git/log/?h=fd.o-32017-muc-self-avatar
http://cgit.collabora.com/git/user/wjt/telepathy-gabble-wjt.git/log/?h=fd.o-32017-muc-self-avatar

I wrote a long message about how I'm not very happy with the fix, and then a combination of Chrome, Bugzilla and Termite Misdirection ate it.

I don't really understand why avatars for other MUC contacts work even when the WockyMuc object swallows the <presence/> stanza, but for the self handle we have to let further handlers run. But life is too short, I've already spent way too long on this.
Comment 3 Simon McVittie 2011-06-01 08:02:40 UTC
Looks good to me.
Comment 4 Will Thompson 2011-06-01 10:19:25 UTC
Thanks, merged to master. I'll release 0.13.0 tomorrow or something with this and other things.

I'm not sure if it's worth the hassle of branching Wocky to backport the fix for just this bug to 0.12. I'll leave the bug open while thinking about it.
Comment 5 Will Thompson 2011-06-02 04:48:58 UTC
Well, here's an equivalent fix without all the other refactoring for Gabble 0.12: http://cgit.collabora.com/git/user/wjt/wocky.git/commit/?h=gabble-0.12&id=955e09193a3935ea496545b507a9ce667b2693fe

If no-one objects I'll push the gabble-0.12 branch to Wocky upstream, shove it into Gabble and release 0.12.1 with it (as well as other accumulated fixxes).
Comment 6 Simon McVittie 2011-06-02 05:09:10 UTC
Seems fine to me.
Comment 7 Will Thompson 2011-06-02 09:23:59 UTC
Cool. So, fixed in 0.12.1 (for which I've pushed the tags but not the tarball due to Annarchy being broken) and master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.