MUC: allow own presence to be passed to other handlers

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=32017>